--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.5",
+    "@netlify/angular-runtime": "^2.2.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/mapbox-gl": "^3.1.0",
